--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
       window.menuicon = "<%=image_url('menu.svg')  %>"
       window.searchicon = "<%=image_url('search.svg')  %>"
       window.usericon = "<%=image_url('usericon.svg')  %>"
+      window.linkedin = "<%=image_url('linkedin.png')  %>"
+      window.github = "<%=image_url('githublogo.png')  %>"
+      window.google = "<%=image_url('google.png')  %>"
+      window.facebook = "<%=image_url('Facebook-logo.png')  %>"
+      window.x = "<%=image_url('x.svg')  %>"
+
+
     </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
