--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,12 @@
  *= require_self
  */
 
- @import "home.scss";
+/* @import "home.scss";
 
-  @import "modal.scss";
+@import "modal.scss";
 
 @import "login.scss";
 
-@import "signup.scss";
+@import "signup.scss"; */
 
 
