--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       window.github = "<%=image_url('githublogo.png')  %>"
       window.google = "<%=image_url('google.png')  %>"
       window.facebook = "<%=image_url('Facebook-logo.png')  %>"
+      window.aA = "<%=image_url('aA.png')  %>"
       window.x = "<%=image_url('x.svg')  %>"
 
 
