--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -31,7 +31,7 @@
 .no-shot-this-works {
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    // margin-top: 20px;
 }
 
 .form-border{
@@ -202,3 +202,17 @@ form .data {
     color: #484848;
 }
 
+.rend-errors {
+    display: flex;
+    z-index: 2;
+    // height: 100px;
+    width: 100%;
+
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+}
+
+.rend-errors-2{
+    width: max-content;
+}
