--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -192,7 +192,8 @@
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    border-top: 1px solid lightgray
+    border-top: 1px solid lightgray;
+    cursor: pointer;
 }
 
 .ili{
