hammad for the win

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,22 @@
       window.etw1 = "<%=image_url('etw1.png')  %>"
       window.etw2 = "<%=image_url('etw2.png')  %>"
       window.etw3 = "<%=image_url('etw3.png')  %>"
+      window.elon = "<%=image_url('elon.png')  %>"
+      window.door = "<%=image_url('door.svg')  %>"
+      window.clean = "<%=image_url('clean.svg')  %>"
+      window.house = "<%=image_url('house.svg')  %>"
+      window.rules = "<%=image_url('rules.svg')  %>"
+      window.cal = "<%=image_url('cal.svg')  %>"
+      window.w1 = "<%=image_url('w1.png')  %>"
+      window.w2 = "<%=image_url('w2.png')  %>"
+      window.w3 = "<%=image_url('w3.png')  %>"
+      window.w4 = "<%=image_url('w4.png')  %>"
+      window.w5 = "<%=image_url('w5.png')  %>"
+      window.hotel11 = "<%=image_url('hotel11.png')  %>"
+      window.hotel12 = "<%=image_url('hotel12.png')  %>"
+      window.hotel13 = "<%=image_url('hotel13.png')  %>"
+      window.hotel14 = "<%=image_url('hotel14.png')  %>"
+      window.hotel15 = "<%=image_url('hotel15.png')  %>"
 
 
     </script>
