--- a/app/assets/stylesheets/listingshow.scss
+++ b/app/assets/stylesheets/listingshow.scss
@@ -107,3 +107,99 @@
     
 
 }
+
+.hosted-by {
+    margin-top:20px;
+    margin-left: 60px;
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid lightgray;
+}
+
+.hosted-by-a {
+    display: flex;
+    flex-direction: column;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.hh {
+    margin-bottom: 3px;
+}
+
+.hosted-by-a-1 {
+    display: flex;
+    align-items: center;
+    font-weight: 200;
+    
+ 
+}
+
+.hosted-by img{
+    margin-left: 90px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-top: 20px;
+}
+
+.more-things{
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid lightgray;
+    margin-left: 60px;
+    width: fit-content;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.more-things-a {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.more-things-a img{
+    margin-right: 20px;
+    height: 20px;
+    width: 20px;
+    margin-bottom: 10px;
+}
+
+
+.mtaa{
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.mtaaa{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.sticks {
+    display: flex;
+}
+
+.sticks2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.map2{
+
+    margin-left: 40px;
+}
+
+.descript {
+    border-top: 1px solid lightgray;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    
+}
