--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -196,6 +196,7 @@
     cursor: pointer;
 }
 
+
 .ili{
     width: 300px;
     height: 200px;
@@ -240,6 +241,16 @@
     display: inline-flex;
     align-items: center;
     height: 22px;
+    color: #484848;
+    font-size: 14px;
+    font-weight: 200;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.ilc4a{
+    display: inline-flex;
+    align-items: center;
+    height: 100%;
     color: #484848;
     font-size: 14px;
     font-weight: 200;
