--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -195,6 +195,14 @@
     height: 698px;
 }
 
+#map2 {
+    width: 1000px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+
 
 .gdf {
     background: red;
