minor css changes

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -193,6 +193,7 @@ form .data {
 .dont-have-acct {
     display: flex;
     margin-top: 35px;
+    align-items: center;
 }
 
 .dont-have-acct span {
