--- a/app/assets/stylesheets/listingshow.scss
+++ b/app/assets/stylesheets/listingshow.scss
@@ -1,6 +1,6 @@
 .ltitle{
     font-weight: 450;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Circular Air Book;
     font-size: 26px;
     padding-left: 60px;
     margin-top: 30px;
@@ -18,7 +18,7 @@
     height: fit-content;
     display: flex;
     align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Circular Air Book;
     color: grey;
 
     
@@ -45,7 +45,7 @@
 .above-img-c{
     // display: flex;
     width: fit-content;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Circular Air Book;
     color: grey;
 }
 
@@ -121,8 +121,7 @@
 .hosted-by-a {
     display: flex;
     flex-direction: column;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Circular Air Book;
 }
 
 .hh {
@@ -199,7 +198,7 @@
     border-top: 1px solid lightgray;
     padding-bottom: 20px;
     padding-top: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Circular Air Book;
     font-weight: 300;
     
 }
@@ -337,4 +336,42 @@
 .lspricesaf :first-child{
   
     flex: 1;
+}
+
+.needfont {
+    margin-left: 60px;
+    //  font-size: 16px;
+    // line-height: 20px;
+    // font-weight: 600;
+    font-family: Circular Air Book;
+
+}
+
+.abovereviews {
+    margin-top: 80px;
+    border-top: 1px solid lightgray;
+    padding-top: 20px;
+    font-family: Circular Air Book;
+    margin-left: 60px;
+}
+
+.reviewsdiv {
+    
+    padding-top: 20px;
+     padding-bottom: 20px;
+  
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    height: fit-content;
+    border: 1px solid rgb(221, 221, 221);
+    border-radius: 12px;
+    box-shadow: 0px 6px 16px rgb(240, 238, 238);
+    font-family: Circular Air Book;
+    justify-content: space-evenly;
+}
+
+.middle {
+    // width: 250px;
 }
