--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -162,6 +162,7 @@ form .data-3 {
     display: flex;
     // margin-top: 35px;
     margin-left: 15px;
+    align-items: center;
 }
 
 .dont-have-acct span {
