hope this works

--- a/app/assets/stylesheets/listingshow.scss
+++ b/app/assets/stylesheets/listingshow.scss
@@ -372,6 +372,8 @@
     justify-content: space-evenly;
 }
 
-.middle {
-    // width: 250px;
+
+.reviews {
+    width: fit-content;
+    height: fit-content;
 }
